--- a/src/App.css
+++ b/src/App.css
@@ -176,9 +176,9 @@ li {
 }
 
 /* input div */
-#input-field {
-  position: absolute;
-  bottom: 16px;
+#form {
+  position: fixed;
+  bottom: 8px;
   left: 0px;
   width: 100%;
   padding: 0 8px;
